# stock-management-playground

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-and-test-frontend.yml  test-backend.yml
backend/: .env-template  pyproject.toml
backend/app/: dependencies.py  finnhub_tracked_stocks.py  main.py  test_main.py
backend/app/configs/: settings.py
backend/app/dtos/: add_to_stock_entry_data.py  amount_data.py  create_stock_entry_data.py  create_wallet_data.py  create_wallet_me_data.py  sell_from_stock_entry_dto.py
backend/app/models/: stock.py  stock_entry.py  stock_history.py  token.py  user.py  wallet.py
backend/app/repos/: stock.py  test_user.py  test_wallet.py  user.py  wallet.py
backend/app/routers/: auth.py  stock_entries.py  stocks.py  test_auth.py  test_users.py  test_wallets.py  users.py  wallets.py
backend/app/services/: finnhub.py  stock.py  stock_entry.py  test_user.py  test_wallet.py  user.py  wallet.py
backend/app/test_utils/: test.py
backend/app/utils/: auth.py  convertors.py  custom_exceptions.py  mongo.py  test_auth.py  test_validators.py  validators.py
configs/backend/: backend.Dockerfile
configs/frontend/: frontend.Dockerfile
configs/gateway/: prepare-certbot.sh
configs/gateway/conf.d/: container-map.conf  default.conf
docs/postman/: stock-management-playground.postman_collection.json
frontend/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/.github/workflow/: build-and-test-frontend.yml
frontend/src/: App.test.tsx  App.tsx  index.tsx  routes.ts  setupTests.ts
frontend/src/hooks/: useLocalStorage.ts
frontend/src/mock-api/: handlers.ts
(+122 files in other folders)
