[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["CristiPV, ithai5"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pytest = "^7.1.3"
requests = "^2.28.1"
beanie = "^1.11.9"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
